[gd_scene load_steps=2 format=3 uid="uid://bftwn6mpl6t8g"]

[ext_resource type="Script" uid="uid://clcdlheay6hgn" path="res://scenes/menu/reset_password_form.gd" id="1_d1de5"]

[node name="ResetPasswordForm" type="Node2D"]
position = Vector2(768, 144)
scale = Vector2(2, 2)
script = ExtResource("1_d1de5")

[node name="Labels" type="Node2D" parent="."]

[node name="ResetPasswordLabel" type="Label" parent="Labels"]
offset_left = 32.0
offset_right = 160.0
offset_bottom = 23.0
text = "Reset Password"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="UsernameLabel" type="Label" parent="Labels"]
offset_top = 64.0
offset_right = 128.0
offset_bottom = 87.0
text = "Username:"
metadata/_edit_use_anchors_ = true

[node name="QuestionLabel" type="Label" parent="Labels"]
offset_top = 128.0
offset_right = 154.0
offset_bottom = 184.0
text = "What was the name
of your first school?"
metadata/_edit_use_anchors_ = true

[node name="PasswordLabel" type="Label" parent="Labels"]
offset_top = 224.0
offset_right = 128.0
offset_bottom = 247.0
text = "New Password:"
metadata/_edit_use_anchors_ = true

[node name="ConfirmPasswordLabel" type="Label" parent="Labels"]
offset_top = 292.0
offset_right = 128.0
offset_bottom = 315.0
text = "Confirm Password:"
metadata/_edit_use_anchors_ = true

[node name="ErrorLabel" type="Label" parent="Labels"]
offset_top = 360.0
offset_right = 192.0
offset_bottom = 384.0
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="Node2D" parent="."]

[node name="ResetButton" type="Button" parent="Buttons"]
offset_top = 392.0
offset_right = 88.0
offset_bottom = 424.0
text = "Reset"
metadata/_edit_use_anchors_ = true

[node name="CancelButton" type="Button" parent="Buttons"]
offset_left = 104.0
offset_top = 392.0
offset_right = 192.0
offset_bottom = 424.0
text = "Cancel"
metadata/_edit_use_anchors_ = true

[node name="Input" type="Node2D" parent="."]

[node name="UsernameInput" type="LineEdit" parent="Input"]
offset_top = 88.0
offset_right = 192.0
offset_bottom = 120.0
metadata/_edit_use_anchors_ = true

[node name="QuestionInput" type="LineEdit" parent="Input"]
offset_top = 184.0
offset_right = 192.0
offset_bottom = 216.0
metadata/_edit_use_anchors_ = true

[node name="PasswordInput" type="LineEdit" parent="Input"]
offset_top = 248.0
offset_right = 192.0
offset_bottom = 280.0
secret = true
metadata/_edit_use_anchors_ = true

[node name="ConfirmPasswordInput" type="LineEdit" parent="Input"]
offset_top = 316.0
offset_right = 192.0
offset_bottom = 348.0
secret = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
